# badog

./: .cocos-project.json  CMakeLists.txt
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/MoriorGames/: Definitions.h
Classes/MoriorGames/Scenes/: GameScene.cpp  GameScene.h
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/BaDog.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: BaDog.sln
